2009-09-03  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Crash after typing "clear" and pressing return in inspector console.

        https://bugs.webkit.org/show_bug.cgi?id=28684

        * inspector/front-end/InjectedScript.js:
        (InjectedScript._clearConsoleMessages):
        (InjectedScript._inspectObject):
        (InjectedScript._ensureCommandLineAPIInstalled):

2009-09-03  Vitaly Repeshko  <vitalyr@chromium.org>

        Reviewed by Adam Barth.

        [V8] Squeezed out some performance from string conversion.
        https://bugs.webkit.org/show_bug.cgi?id=28945

        * bindings/v8/V8Binding.cpp:
        (WebCore::WebCoreStringResource::WebCoreStringResource):
        (WebCore::WebCoreStringResource::~WebCoreStringResource):
        (WebCore::WebCoreStringResource::data):
        (WebCore::WebCoreStringResource::length):
        (WebCore::WebCoreStringResource::atomicString):
        (WebCore::WebCoreStringResource::string):
        Avoid calling virtual length method. Be more explicit with
        external memory computation. Avoid function calls in data and
        length.
        (WebCore::):
        (WebCore::v8StringToWebCoreString):
        (WebCore::v8StringToAtomicWebCoreString):
        (WebCore::v8NonStringValueToWebCoreString):
        (WebCore::v8NonStringValueToAtomicWebCoreString):
        Avoid extra calls of WebCoreStringResource::toString. When
        AtomicString is computed pass it immediately when constructing
        WebCoreStringResource. Use inline buffer for small strings.
        * bindings/v8/V8Binding.h:
        (WebCore::v8ValueToWebCoreString):
        (WebCore::v8ValueToAtomicWebCoreString):
        (WebCore::toString):
        Inline dispatch of string vs. non-string values.

2009-09-03  Vitaly Repeshko  <vitalyr@chromium.org>

        Reviewed by Adam Barth.

        [V8] Inlined common case of V8IsolatedWorld::getEntered to speed
        up V8Proxy lookup.