@@ -2,6 +2,18 @@
 
         Reviewed by Timothy Hatcher.
 
+        WebInspector: Do not query non-function call frames for function name.
+
+        https://bugs.webkit.org/show_bug.cgi?id=28799
+
+        * inspector/front-end/InjectedScript.js:
+        (InjectedScript.CallFrameProxy):
+        (InjectedScript.CallFrameProxy.prototype._wrapScopeChain):
+
+2009-09-03  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
         Crash after typing "clear" and pressing return in inspector console.
 
         https://bugs.webkit.org/show_bug.cgi?id=28684
